tests/integration/snapshots/integration__schema_snapshots__response_schema_HandoffSuggestion.snap
---
source: tests/integration/schema_snapshots.rs
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "HandoffSuggestion",
  "description": "Suggested handoff write.",
  "type": "object",
  "properties": {
    "content": {
      "description": "Candidate content.",
      "type": "string"
    },
    "scope": {
      "description": "Resolved target scope.",
      "type": "string"
    },
    "unresolved_scope": {
      "description": "Whether the scope is unresolved.",
      "type": "boolean"
    },
    "scope_resolution": {
      "description": "How the scope was resolved.",
      "$ref": "#/$defs/ScopeResolution"
    },
    "context_resolution": {
      "description": "Governed context resolution.",
      "anyOf": [
        {
          "$ref": "#/$defs/ContextResolution"
        },
        {
          "type": "null"
        }
      ]
    },
    "contexts": {
      "description": "Direct governed memberships.",
      "type": "array",
      "items": {
        "$ref": "#/$defs/ContextDescriptor"
      }
    },
    "warnings": {
      "description": "Quality warnings.",
      "type": "array",
      "items": {
        "$ref": "#/$defs/QualityWarning"
      }
    },
    "id": {
      "description": "Stored memory ID when `commit=true`.",
      "anyOf": [
        {
          "$ref": "#/$defs/MemoryId"
        },
        {
          "type": "null"
        }
      ]
    },
    "duplicate_candidates": {
      "description": "Potential duplicate memories.",
      "type": "array",
      "items": {
        "$ref": "#/$defs/DuplicateCandidateCard"
      }
    },
    "next_action": {
      "description": "Recommended next action for this candidate.",
      "$ref": "#/$defs/NextAction"
    }
  },
  "required": [
    "content",
    "scope",
    "unresolved_scope",
    "scope_resolution",
    "contexts",
    "warnings",
    "duplicate_candidates",
    "next_action"
  ],
  "$defs": {
    "ScopeResolution": {
      "description": "Diagnostic details for agent-facing scope resolution.",
      "type": "object",
      "properties": {
        "scope": {
          "description": "Resolved scope key, or `inbox/unresolved`.",
          "type": "string"
        },
        "unresolved_scope": {
          "description": "Whether the scope still needs classification.",
          "type": "boolean"
        },
        "resolved_by": {
          "description": "Resolution mechanism.",
          "$ref": "#/$defs/ScopeResolvedBy"
        },
        "matched_hint": {
          "description": "Input hint or explicit value that matched, when applicable.",
          "type": [
            "string",
            "null"
          ]
        },
        "matched_value": {
          "description": "Registry alias or matcher value that matched, when applicable.",
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "scope",
        "unresolved_scope",
        "resolved_by"
      ]
    },
    "ScopeResolvedBy": {
      "description": "Compatibility mechanism used to derive a legacy scope.",
      "oneOf": [
        {
          "description": "Explicit scope key or raw explicit scope value.",
          "type": "string",
          "const": "explicit"
        },
        {
          "description": "A context alias matched.",
          "type": "string",
          "const": "alias"
        },
        {
          "description": "A context resolver hint matched an explicit scope or legacy context hint.",
          "type": "string",
          "const": "matcher"
        },
        {
          "description": "No scope could be resolved.",
          "type": "string",
          "const": "unresolved"
        }
      ]
    },
    "ContextResolution": {
      "description": "Agent-facing governed context resolution.",
      "type": "object",
      "properties": {
        "direct": {
          "description": "Directly selected contexts in caller order.",
          "type": "array",
          "items": {
            "$ref": "#/$defs/ContextDescriptor"
          }
        },
        "effective": {
          "description": "Direct selections plus ancestors and optional descendants.",
          "type": "array",
          "items": {
            "$ref": "#/$defs/ContextDescriptor"
          }
        },
        "candidates": {
          "description": "Authorized ambiguous or fuzzy candidates.",
          "type": "array",
          "items": {
            "$ref": "#/$defs/ContextCandidate"
          }
        },
        "policy_guidance": {
          "description": "Effective policy guidance.",
          "type": "array",
          "items": {
            "type": "string"
          }
        },
        "broad_search": {
          "description": "Whether omission intentionally selected a broad authorized search.",
          "type": "boolean"
        },
        "unresolved": {
          "description": "Whether resolution remains intentionally deferred.",
          "type": "boolean"
        },
        "recommended_actions": {
          "description": "Reusable recommended actions.",
          "type": "array",
          "items": {
            "$ref": "#/$defs/RecommendedAction"
          }
        }
      },
      "required": [
        "direct",
        "effective",
        "candidates",
        "policy_guidance",
        "broad_search",
        "unresolved",
        "recommended_actions"
      ]
    },
    "ContextDescriptor": {
      "description": "Safe context descriptor returned on memory cards and resolution results.",
      "type": "object",
      "properties": {
        "id": {
          "description": "Stable opaque ID.",
          "$ref": "#/$defs/ContextId"
        },
        "kind": {
          "description": "Context kind.",
          "$ref": "#/$defs/ContextKind"
        },
        "key": {
          "description": "Immutable context key.",
          "type": "string"
        },
        "display_name": {
          "description": "Human-readable display name.",
          "type": "string"
        }
      },
      "required": [
        "id",
        "kind",
        "key",
        "display_name"
      ]
    },
    "ContextId": {
      "description": "A ULID-formatted opaque context identifier",
      "type": "string"
    },
    "ContextKind": {
      "description": "Stable context kind. Built-in kinds and operator-defined kinds use the same\nrepresentation so adding a kind does not require a wire-protocol change.",
      "type": "string"
    },
    "ContextCandidate": {
      "description": "Fuzzy or ambiguous authorized context candidate.",
      "type": "object",
      "properties": {
        "context": {
          "description": "Safe context descriptor.",
          "$ref": "#/$defs/ContextDescriptor"
        },
        "score": {
          "description": "Similarity score from 0.0 to 1.0.",
          "type": "number",
          "format": "double"
        },
        "matched_by": {
          "description": "Matching surfaces, such as key, display name, alias, identity, or hint.",
          "type": "array",
          "items": {
            "type": "string"
          }
        }
      },
      "required": [
        "context",
        "score",
        "matched_by"
      ]
    },
    "RecommendedAction": {
      "description": "Deterministic next action recommended by `brief`.",
      "type": "object",
      "properties": {
        "tool": {
          "description": "Tool to call next.",
          "$ref": "#/$defs/RecommendedActionTool"
        },
        "priority": {
          "description": "Action priority.",
          "$ref": "#/$defs/RecommendedActionPriority"
        },
        "reason": {
          "description": "Why this action is recommended.",
          "type": "string"
        },
        "arguments": {
          "description": "Complete tool arguments when the server can construct a valid call."
        }
      },
      "required": [
        "tool",
        "priority",
        "reason"
      ]
    },
    "RecommendedActionTool": {
      "description": "Tool name for a deterministic next action recommended by `brief`.",
      "oneOf": [
        {
          "description": "Read one full memory by ID.",
          "type": "string",
          "const": "read"
        },
        {
          "description": "Read multiple full memories by ID.",
          "type": "string",
          "const": "read_many"
        },
        {
          "description": "Run a focused recall search.",
          "type": "string",
          "const": "recall"
        },
        {
          "description": "Store a new durable memory.",
          "type": "string",
          "const": "remember"
        },
        {
          "description": "Resolve or browse governed contexts.",
          "type": "string",
          "const": "context_resolve"
        },
        {
          "description": "Create a governed context.",
          "type": "string",
          "const": "context_create"
        },
        {
          "description": "Register a missing scope definition.",
          "type": "string",
          "const": "admin_scope_register"
        }
      ]
    },
    "RecommendedActionPriority": {
      "description": "Priority for a deterministic next action recommended by `brief`.",
      "oneOf": [
        {
          "description": "Do this first.",
          "type": "string",
          "const": "high"
        },
        {
          "description": "Useful but not urgent.",
          "type": "string",
          "const": "normal"
        },
        {
          "description": "Optional follow-up for weak or stale context.",
          "type": "string",
          "const": "low"
        }
      ]
    },
    "QualityWarning": {
      "description": "A quality or classification warning returned by write tools.",
      "type": "object",
      "properties": {
        "code": {
          "description": "Stable warning code.",
          "type": "string"
        },
        "severity": {
          "description": "Severity for agent triage.",
          "$ref": "#/$defs/QualityWarningSeverity"
        },
        "field": {
          "description": "Optional request field path associated with this warning.",
          "type": [
            "string",
            "null"
          ]
        },
        "message": {
          "description": "Human-readable warning message.",
          "type": "string"
        },
        "suggested_fix": {
          "description": "Optional suggested agent action.",
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "code",
        "severity",
        "message"
      ]
    },
    "QualityWarningSeverity": {
      "description": "Severity for quality warnings.",
      "oneOf": [
        {
          "description": "Informational hint; the operation is usually usable.",
          "type": "string",
          "const": "info"
        },
        {
          "description": "Warning worth reviewing before relying on the result.",
          "type": "string",
          "const": "warning"
        },
        {
          "description": "Follow-up action is required for best results.",
          "type": "string",
          "const": "action_required"
        }
      ]
    },
    "MemoryId": {
      "description": "A ULID-formatted unique memory identifier",
      "type": "string"
    },
    "DuplicateCandidateCard": {
      "description": "A compact duplicate candidate card.",
      "type": "object",
      "properties": {
        "id": {
          "description": "Candidate memory ID.",
          "$ref": "#/$defs/MemoryId"
        },
        "summary_or_excerpt": {
          "description": "Compact excerpt.",
          "type": "string"
        },
        "match": {
          "description": "Agent-facing match assessment.",
          "$ref": "#/$defs/MatchAssessment"
        }
      },
      "required": [
        "id",
        "summary_or_excerpt",
        "match"
      ]
    },
    "MatchAssessment": {
      "description": "Agent-facing match assessment for a compact card.",
      "type": "object",
      "properties": {
        "quality": {
          "description": "Match quality label.",
          "$ref": "#/$defs/MatchQuality"
        },
        "action": {
          "description": "Recommended action for agents.",
          "$ref": "#/$defs/MatchAction"
        },
        "score": {
          "description": "Final query relevance on a 0.0-1.0 scale.",
          "type": "number",
          "format": "double"
        },
        "score_basis": {
          "description": "Ranking signal used to compute `score`.",
          "$ref": "#/$defs/MatchScoreBasis"
        }
      },
      "required": [
        "quality",
        "action",
        "score",
        "score_basis"
      ]
    },
    "MatchQuality": {
      "description": "Agent-facing match quality label.",
      "oneOf": [
        {
          "description": "Strong match.",
          "type": "string",
          "const": "strong"
        },
        {
          "description": "Usable but not definitive.",
          "type": "string",
          "const": "possible"
        },
        {
          "description": "Weak match suppressed by default.",
          "type": "string",
          "const": "weak"
        }
      ]
    },
    "MatchAction": {
      "description": "Recommended agent action for a matched card.",
      "oneOf": [
        {
          "description": "Read the full memory.",
          "type": "string",
          "const": "read"
        },
        {
          "description": "Consider reading if more context is needed.",
          "type": "string",
          "const": "consider"
        },
        {
          "description": "Ignore unless explicitly debugging retrieval.",
          "type": "string",
          "const": "ignore"
        }
      ]
    },
    "MatchScoreBasis": {
      "description": "Basis used to compute the agent-facing match score.",
      "oneOf": [
        {
          "description": "Blended cross-encoder reranker score and first-stage retrieval score.",
          "type": "string",
          "const": "reranker_blend"
        },
        {
          "description": "First-stage retrieval score only.",
          "type": "string",
          "const": "retrieval"
        },
        {
          "description": "Low confidence association score for expanded/contextual candidates.",
          "type": "string",
          "const": "association"
        },
        {
          "description": "No ranking signal was available.",
          "type": "string",
          "const": "unavailable"
        }
      ]
    },
    "NextAction": {
      "description": "Recommended follow-up action for agents after a tool call.",
      "oneOf": [
        {
          "description": "No follow-up is needed.",
          "type": "string",
          "const": "none"
        },
        {
          "description": "Read the returned or affected memory.",
          "type": "string",
          "const": "read"
        },
        {
          "description": "Review duplicate candidates before relying on the write.",
          "type": "string",
          "const": "review_duplicates"
        },
        {
          "description": "Classify unresolved scope later.",
          "type": "string",
          "const": "classify_scope"
        },
        {
          "description": "Re-run the same maintenance operation to continue a capped batch.",
          "type": "string",
          "const": "continue"
        },
        {
          "description": "Inspect warnings before proceeding.",
          "type": "string",
          "const": "review_warnings"
        }
      ]
    }
  }
}
