tests/integration/snapshots/integration__schema_snapshots__response_schema_MatchAssessment.snap
---
source: tests/integration/schema_snapshots.rs
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "MatchAssessment",
  "description": "Agent-facing match assessment for a compact card.",
  "type": "object",
  "properties": {
    "quality": {
      "description": "Match quality label.",
      "$ref": "#/$defs/MatchQuality"
    },
    "action": {
      "description": "Recommended action for agents.",
      "$ref": "#/$defs/MatchAction"
    },
    "score": {
      "description": "Final query relevance on a 0.0-1.0 scale.",
      "type": "number",
      "format": "double"
    },
    "score_basis": {
      "description": "Ranking signal used to compute `score`.",
      "$ref": "#/$defs/MatchScoreBasis"
    }
  },
  "required": [
    "quality",
    "action",
    "score",
    "score_basis"
  ],
  "$defs": {
    "MatchQuality": {
      "description": "Agent-facing match quality label.",
      "oneOf": [
        {
          "description": "Strong match.",
          "type": "string",
          "const": "strong"
        },
        {
          "description": "Usable but not definitive.",
          "type": "string",
          "const": "possible"
        },
        {
          "description": "Weak match suppressed by default.",
          "type": "string",
          "const": "weak"
        }
      ]
    },
    "MatchAction": {
      "description": "Recommended agent action for a matched card.",
      "oneOf": [
        {
          "description": "Read the full memory.",
          "type": "string",
          "const": "read"
        },
        {
          "description": "Consider reading if more context is needed.",
          "type": "string",
          "const": "consider"
        },
        {
          "description": "Ignore unless explicitly debugging retrieval.",
          "type": "string",
          "const": "ignore"
        }
      ]
    },
    "MatchScoreBasis": {
      "description": "Basis used to compute the agent-facing match score.",
      "oneOf": [
        {
          "description": "Blended cross-encoder reranker score and first-stage retrieval score.",
          "type": "string",
          "const": "reranker_blend"
        },
        {
          "description": "First-stage retrieval score only.",
          "type": "string",
          "const": "retrieval"
        },
        {
          "description": "Low confidence association score for expanded/contextual candidates.",
          "type": "string",
          "const": "association"
        },
        {
          "description": "No ranking signal was available.",
          "type": "string",
          "const": "unavailable"
        }
      ]
    }
  }
}
